--- a/Gallio Test Report_files/Gallio-Report.generated.css
+++ b/Gallio Test Report_files/Gallio-Report.generated.css
@@ -46,6 +46,10 @@
 {
     background-image: url(../img/testkinds/MbUnitv2Assembly.png);
 }
+.gallio-report .testKind-MbUnitUnmanagedC++TestLibrary
+{
+    background-image: url(../img/testkinds/MbUnitUnmanagedC++TestLibrary.png);
+}
 .gallio-report .testKind-NUnitv254+Assembly
 {
     background-image: url(../img/testkinds/NUnitv254+Assembly.png);
@@ -58,9 +62,13 @@
 {
     background-image: url(../img/testkinds/NUnitv253Assembly.png);
 }
-.gallio-report .testKind-xUnitAssembly
+.gallio-report .testKind-xUnitv17+Assembly
 {
-    background-image: url(../img/testkinds/xUnitAssembly.png);
+    background-image: url(../img/testkinds/xUnitv17+Assembly.png);
+}
+.gallio-report .testKind-xUnitv161Assembly
+{
+    background-image: url(../img/testkinds/xUnitv161Assembly.png);
 }
 .gallio-report .testKind-RSpecFile
 {
